--- a/index.html
+++ b/index.html
@@ -1,82 +1,18 @@
-<!DOCTYPE html>
+!doctype html>
 <html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <title>猫の実態</title>
+    <meta name="description" content="猫の好きなもの、日々の生活をご紹介" />
+  </head>
 
-<head>
-	<meta charset="UTF-8">
-	<title>NESThair</title>
-	<link rel="stylesheet" href="style.css" type="text/css" media="screen">
-</head>
-
-<body>
-
-<div id="wrapper">
-
-	<!-- ヘッダーここから -->
-	<header>
-		<h1>
-			京都の学生向けオーガニックヘアサロンなら<br>
-			<span>NESThair</span>
-		</h1>
-
-		<nav>
-			<ul>
-				<li><a href="#">ホーム</a></li>
-				<li><a href="#">メニュー一覧</a></li>
-				<li><a href="#">ご予約</a></li>
-			</ul>
-		</nav>
-
-		<div class="clear"></div>
-
-		<p id="nav_tel">
-			<img src="images/tel_nav.jpg" alt="お電話でのご予約はこちらまで 012-345-6789">
-		</p>
-	</header>
-	<!-- ヘッダーここまで -->
-
-	<!-- メイン画像ここから -->
-	<div id="mainimage" class="box-shadow">
-		<img src="images/mainimage.jpg" alt="メイン画像">
-	</div>
-	<!-- メイン画像ここまで -->
-
-	<!-- 左ここから -->
-	<div id="left" class="box-shadow">
-		<h2>新着情報</h2>
-		<ul>
-			<li><span>2013-9-20</span>タイトルがはいります。タイトルがはいります。</li>
-			<li><span>2013-9-20</span>タイトルがはいります。タイトルがはいります。</li>
-			<li><span>2013-9-20</span>タイトルがはいります。タイトルがはいります。</li>
-			<li><span>2013-9-20</span>タイトルがはいります。タイトルがはいります。</li>
-			<li><span>2013-9-20</span>タイトルがはいります。タイトルがはいります。</li>
-			<li><span>2013-9-20</span>タイトルがはいります。タイトルがはいります。</li>
-			<li><span>2013-9-20</span>タイトルがはいります。タイトルがはいります。</li>
-			<li><span>2013-9-20</span>タイトルがはいります。タイトルがはいります。</li>
-			<li><span>2013-9-20</span>タイトルがはいります。タイトルがはいります。</li>
-		</ul>
-	</div>
-	<!-- 左ここまで -->
-
-	<!-- 右ここから -->
-	<div id="right">
-		<ul>
-			<li class="box-shadow"><a id="contact" href="#">ご予約・お問い合わせ</a></li>
-			<li class="box-shadow"><a id="blog" href="#">スタイリストブログ</a></li>
-		</ul>
-	</div>
-	<!-- 右ここまで -->
-
-	<div class="clear"></div>
-
-</div><!-- //#wrapper -->
-
-	<!-- フッターここから -->
-	<footer>
-		<p>Copyright (C) 2010-2015 Campus inc. All Right Reserved.</p>
-	</footer>
-	<!-- フッターここまで -->
-
-
-</body>
-
+  <body>
+    <h1>犬の一日</h1>
+    <p>ひたすら寝ています。</p>
+    <p>ひたすら寝ています。</p>
+    <img
+      src="../images/c:\Users\User\Desktop (3211)\top\images\fruit_apple_yellow.png"
+      alt="美しい桜"
+    />
+  </body>
 </html>
